# UCSD-CSE256-2026WI-PA2

./: README.md  main.py  plot.ipynb  pyproject.toml  utilities.py
checkpoints/: classifier.pt  lm.pt
transformer/: __init__.py  attention.py  decoder.py  encoder.py  positional_embedding.py
