[project]
name = "cse256-pa2-wi26"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "einops>=0.8.2",
    "ipdb>=0.13.13",
    "ipykernel>=7.2.0",
    "jaxtyping>=0.3.7",
    "matplotlib>=3.10.8",
    "nltk>=3.9.2",
    "pandas>=2.3.3",
    "torch>=2.10.0",
    "wandb>=0.16.0",
]
